[package]
name = "x816"
version = "0.1.0"
authors = ["Emmanuel Peralta <manz@ringum.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator-global = { version = "0.3", optional = true }
pyembed = { path = "pyembed" }

[features]
default = []
jemalloc = ["jemallocator-global", "pyembed/jemalloc"]
